<resources>
    <string name="app_name">The Bookshop</string>
    <string name="text_search_hint">Search cái gì đó đi</string>
    <string name="text_account">Tài khoản</string>
    <string name="text_password">Mật khẩu</string>
    <string name="text_old_password">Mật khẩu cũ</string>
    <string name="text_new_password">Mật khẩu mới</string>
    <string name="text_repassword">Xác nhận lại mật khẩu</string>
    <string name="text_forgot_password">Quên mật khẩu?</string>
    <string name="text_login">Đăng nhập</string>
    <string name="text_sign_up">Đăng ký tài khoản</string>
    <string name="text_copy_right">FPTU IS1416 @lazy-neko\ncopyright © 2021</string>
    <string name="txt_account_info">Thông tin tài khoản</string>
    <string name="txt_changing_account_info">Sửa thông tin tài khoản</string>
    <string name="text_lastname">Họ và tên đệm</string>
    <string name="text_firstname">Tên</string>
    <string name="text_email">Email</string>
    <string name="text_phone">Số điện thoại</string>
    <string name="text_agree_policy">Tôi đồng ý với các điều khoản sử dụng dịch vụ</string>
    <string name="text_double_back_exit">Chạm lần nữa để thoát</string>
    <string name="txt_label_total">Tổng tiền: </string>
    <string name="txt_button_checkout">Thanh toán</string>
    <string name="txt_label_total_price">0</string>
    <string name="txt_label_email_address">Email Address</string>
    <string name="txt_label_billing_address">Billing Address</string>
    <string name="txt_label_warning_address">Please ensure that your address is correct, it can\'t be changed once your order is submitted.</string>
    <string name="txt_btn_confirm_checkout">Confirm</string>
    <string name="txt_label_full_name">Full Name</string>
    <string name="txt_label_phone">Phone</string>
    <string name="text_user_info">Thông tin cá nhân</string>
    <string name="text_change_password">Đổi mật khẩu</string>
    <string name="text_logout">Đăng xuất</string>
    <string name="text_about_app">Thông tin ứng dụng</string>
    <string name="text_history_order">Lịch sử đặt hàng</string>
    <string name="text_noti_save_account_info_success">Sửa đổi thông tin cá nhân hoàn tất</string>
    <string name="text_noti_save_account_info_error">Sửa đổi thông tin cá nhân thất bại</string>
    <string name="text_noti_change_password_success">Đổi mật khẩu thành công</string>
    <string name="txt_book_detail">Chi tiết sản phẩm</string>
    <string name="text_add_to_cart">Thêm vào giỏ hàng</string>
    <string name="txt_publisher">Nhà xuất bản</string>
    <string name="txt_publisher_date">Ngày xuất bản</string>
    <string name="txt_total_page">Số trang</string>
    <string name="txt_category">Thể loại</string>
    <string name="txt_description">Sơ lược về tác phẩm</string>
    <string name="txt_confirm">Xác nhân</string>
    <string name="text_option_popular">Phổ Biến</string>
    <string name="text_option_new">Mới nhất</string>
    <string name="text_option_sale">Bán chạy</string>
    <string name="text_option_price">Giá</string>
    <string name="text_view_more_book">Xem thêm sách</string>
    <string name="txt_best_sale">Sách bán chạy</string>
    <string name="txt_top_new">Sách mới nhất</string>
    <string name="txt_top_rate">Sách được đánh giá cao</string>
    <string name="txt_top_sale_off">Sách HOT - giảm sốc</string>
    <string name="txt_vew_all_book">xem tất cả sách</string>
    <string name="txt_noti_account_disabled_login">Tài khoản đang bị khóa, vui lòng liên hệ với Admin để tiếp tục truy cập</string>
    <string name="txt_noti_account_login_not_found">Không tìm thấy tài khoản yêu cầu!</string>
    <string name="txt_noti_login_failure">Đăng nhập có lỗi. Xin vui lòng thử lại!</string>
    <string name="txt_account_or_password_not_match">Tên tài khoản hoặc mật khẩu sai!</string>
    <string name="text_address">Địa chỉ</string>
    <string name="txt_view_more">Xem thêm</string>
    <string name="txt_view_less">Thu gọn</string>
    <string name="txt_author_description">Đôi nét về tác giả</string>
    <string name="txt_rate">Đánh giá</string>
    <string name="txt_profile">Trang cá nhân</string>
    <string name="txt_cart">Giỏ hàng</string>
    <string name="txt_load_caterory_error">Không tìm thấy danh mục sách tương ứng</string>
    <string name="txt_noti_loading_failure">Có lỗi xảy ra. Xin vui lòng thử lại sau!</string>
    <string name="txt_noti_create_account_success">Tạo tài khoản thành công!</string>
    <string name="txt_noti_account_existed">Tài khoản đã tồn tại!</string>
    <string name="txt_noti_enter_fields">Bạn phải điền đủ các trường thông tin.</string>
    <string name="txt_noti_password_invalid">Mật khẩu tối thiểu 6 ký tự!</string>
    <string name="txt_noti_email_invalid">Email không đúng định dạng. Vui lòng nhập lại!</string>
    <string name="txt_noti_repass_invalid">Mật khẩu nhập lại không khớp!</string>
    <string name="txt_noti_phone_invalid">Số điện thoại không đúng định dạng. Vui lòng nhập lại!</string>
    <string name="txt_noti_username_invalid">Tài khoản tối thiểu 6 ký tự. Vui lòng nhập lại!</string>
    <string name="text_not_login_yet">Bạn chưa đăng nhập?</string>
    <string name="txt_string_greeting">Xin chào, %s</string>
    <string name="txt_load_account_failure">Thông tin tài khoản không tìm thấy, vui lòng thử lại sau</string>
    <string name="txt_noti_password_error">Mật khẩu đăng nhập không đúng. Vui lòng kiểm tra lại!</string>
    <string name="txt_string_book_sold">Đã bán %s quyển</string>
    <string name="txt_in_stock">Còn sẵn</string>
    <string name="txt_out_of_stock">Hết hàng</string>
    <string name="txt_no_rate">Chưa có đánh giá</string>
    <string name="txt_update_cart_success">Cập nhật giỏ hàng thành công</string>
    <string name="txt_add_to_cart_success">Thêm sách vào Giỏ hàng thành công!</string>
    <string name="txt_add_to_cart_login_required">Bạn phải đăng nhập trước khi thêm vào giỏ hàng</string>
    <string name="txt_rated_success">Đánh giá sản phẩm thành công</string>
    <string name="txt_author_not_found">Không tìm thấy thông tin tác giả!</string>
    <string name="txt_book_not_found_by_category">Không tìm thấy thông tin sách tương ứng</string>
    <string name="txt_total_cost">Tổng tiền</string>
    <string name="txt_order">Mua hàng</string>
    <string name="txt_checkout">Đặt hàng</string>
    <string name="txt_name_checkout">Tên người nhận</string>
    <string name="txt_checkout_form_information">Địa chỉ nhận hàng</string>
    <string name="txt_load_account_in_cart_fail">Vui lòng đăng nhập trước khi vào giỏ hàng</string>
    <string name="txt_cart_not_found">Không tìm thấy thông tin Cart của Customer!</string>
    <string name="txt_remove_book_selected_success">Xóa sản phẩm đã chọn thành công</string>
    <string name="txt_quantity_change_success">Thay đổi số lượng thành công</string>
    <string name="txt_cart_have_no_item">Không có sản phẩm nào trong giỏ hàng cả.\nBạn mua cái gì đó đi đã :3</string>
    <string name="txt_string_quantity">x%s</string>
    <string name="txt_not_enough_book_in_stock">Số lượng trong kho không đủ.</string>
    <string name="txt_checkout_success">Mua hàng thành công</string>
    <string name="txt_search_not_found">Không tìm thấy thông tin sách tương ứng!</string>
    <string name="txt_no_book">Trang bạn yêu cầu không có cuốn sách nào cả :(</string>
    <!--    <string name="txt_string_strikethrough">%s</string>-->
</resources>