<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_color"
    tools:context=".ui.login.LoginActivity">
    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progress_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="invisible"
        app:layout_constraintTop_toTopOf="parent"
        app:trackColor="@color/important_button_color" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="360dp"
        android:layout_height="160dp"
        android:src="@drawable/ic_logo_landscape"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/bg_corner_login_panel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_layout_username"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:backgroundTint="@color/important_button_color"
            android:hint="@string/text_account"
            app:boxStrokeColor="@color/important_button_color"
            app:endIconMode="clear_text"
            app:errorEnabled="true"
            app:hintTextColor="@color/important_button_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_layout_old_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/important_button_color"
            android:hint="@string/text_password"
            app:boxStrokeColor="@color/important_button_color"
            app:endIconMode="password_toggle"
            app:errorEnabled="true"
            app:hintTextColor="@color/important_button_color"
            app:layout_constraintEnd_toEndOf="@+id/text_layout_username"
            app:layout_constraintStart_toStartOf="@+id/text_layout_username"
            app:layout_constraintTop_toBottomOf="@+id/text_layout_username">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_old_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/btn_forgot_password"
            style="@style/TextAnchorLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/text_forgot_password"
            app:layout_constraintEnd_toEndOf="@+id/text_layout_old_password"
            app:layout_constraintTop_toBottomOf="@+id/text_layout_old_password" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:backgroundTint="@color/important_button_color"
            android:text="@string/text_login"
            app:cornerRadius="50dp"
            app:layout_constraintEnd_toEndOf="@+id/text_layout_old_password"
            app:layout_constraintStart_toStartOf="@+id/text_layout_old_password"
            app:layout_constraintTop_toBottomOf="@+id/text_layout_old_password" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_sign_up"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/text_sign_up"
            android:textColor="@color/important_button_color"
            app:cornerRadius="50dp"
            app:layout_constraintEnd_toEndOf="@+id/text_layout_old_password"
            app:layout_constraintStart_toStartOf="@+id/text_layout_old_password"
            app:layout_constraintTop_toBottomOf="@+id/btn_login"
            app:rippleColor="@color/important_button_color" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/text_copy_right"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>